[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scene.gd" type="Script" id=1]

[node name="Scene" type="Node2D"]
script = ExtResource( 1 )

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 254.0
margin_top = 125.0
margin_right = 312.0
margin_bottom = 149.0
rect_scale = Vector2( 9.359, 3.35238 )

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 259.0
margin_top = 263.0
margin_right = 317.0
margin_bottom = 287.0
rect_scale = Vector2( 9.28947, 3.73684 )

[node name="Button" type="Button" parent="."]
margin_left = 604.0
margin_top = 405.0
margin_right = 661.0
margin_bottom = 425.0
rect_scale = Vector2( 4.5625, 2.875 )
text = "Submit"

[node name="GETHttp" type="HTTPRequest" parent="."]

[node name="POSTHttp" type="HTTPRequest" parent="."]

[connection signal="text_changed" from="LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="text_changed" from="LineEdit2" to="." method="_on_LineEdit2_text_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="request_completed" from="GETHttp" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="POSTHttp" to="." method="_on_POSTHttp_request_completed"]
